--- a/styles/styles.css
+++ b/styles/styles.css
@@ -927,6 +927,97 @@ input.input-search::placeholder{
   opacity: 0.1;
 }
 
+/* swiper */
+.swiper-button-next:after,
+.swiper-button-prev:after{
+  content: "";
+}
+
+.swiper-button-next,
+.swiper-button-prev{
+  position: absolute;
+  min-width: 20px;
+  min-height: 60px;
+  border: none;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.swiper-button-next{
+  top: 180px;
+  left: 540px;
+  background-image: url(../images/icons/icons-right-arrow.svg);
+}
+
+.swiper-button-prev{
+  top: 180px;
+  left: 30px;
+  background-image: url(../images/icons/icons-left-arrow.svg);
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets .swiper-pagination-horizontal{
+  left: 1076px;
+}
+
+.swiper-pagination{
+  position: absolute;
+  left: 1076px;
+  bottom: 170px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 12px 20px 12px 20px 12px;
+  grid-template-columns: repeat(3, 12px);
+  -webkit-column-gap: 20px;
+      -moz-column-gap: 20px;
+          column-gap: 20px;
+  margin-bottom: 5px;
+  z-index: 2;
+}
+
+.swiper-pagination-bullet {
+  position: relative;
+  width: 4px;
+  height: 4px;
+  background: var(--color-light);
+  border: 2px solid var(--color-dark-text);
+  border-radius: 50%;
+  padding: 4px;
+  cursor: pointer;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--color-dark-text);
+}
+
+.swiper-pagination-bullet:not(:disabled):hover{
+  opacity: 0.6;
+}
+
+.swiper-pagination-bullet:focus-visible{
+  outline: none;
+}
+
+.swiper-pagination-bullet:focus::before{
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  width: 16px;
+  height: 16px;
+  outline: 2px solid var(--focus);
+  outline-offset: 2px;
+}
+
+.swiper-pagination-bullet:not(:disabled):active{
+  opacity: 0.3;
+}
+
+.swiper-pagination-bullet:disabled{
+  opacity: 0.1;
+}
+
 /* Список продуктов */
 
 .products-navigation-list{
@@ -1061,7 +1152,7 @@ input.input-search::placeholder{
 .services{
   background-color: var(--bg-light);
   background: -o-linear-gradient(var(--color-light) 100px, var(--bg-light) 100px, var(--bg-light) 290px);
-  background: linear-gradient(var(--color-light) 100px, var(--bg-light) 100px, var(--bg-light) 290px);
+  background: linear-gradient(var(--color-light) 102px, var(--bg-light) 102px, var(--bg-light) 290px);
 }
 
 .container-services{
@@ -1092,23 +1183,13 @@ input.input-search::placeholder{
   background-color: var(--color-dark-text);
 }
 
-.services-button-active{
-  font-family: "Raleway", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
-  background-color: var(--color-dark-text);
-  color: var(--bg-bright);
-  padding: 10px 138px 10px 18px;
-  border: none;
-  margin-bottom: 30px;
+.tabs-head {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .services-button{
-  position: relative;
   display: inline-block;
   font-family: "Raleway", "Arial", sans-serif;
   font-weight: 800;
@@ -1120,28 +1201,35 @@ input.input-search::placeholder{
   text-decoration: none;
   letter-spacing: 0.2em;
   color: var(--color-dark-text);
-  max-width: 160px;
+  min-width: 160px;
   border: none;
   cursor: pointer;
   padding: 10px 6px;
   margin-bottom: 35px;
   z-index: 2;
+  background: linear-gradient(180deg, var(--bg-light) 17px, var(--bg-bright) 17px, var(--bg-bright) 25px, var(--bg-light) 25px);
 }
 
-.services-button::before{
-  content:"";
-  position: absolute;
-  height: 8px;
+.services-button-ligth{
+  background: linear-gradient(180deg, var(--color-light) 17px, var(--bg-bright) 17px, var(--bg-bright) 25px, var(--color-light) 25px);
+}
+
+.services-button-active{
+  display: block;
+  font-family: "Raleway", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  background: var(--color-dark-text);
+  color: var(--bg-bright);
+  padding: 10px 138px 10px 18px;
+  border: none;
+  margin-bottom: 35px;
   width: 100%;
-  left: 0%;
-  right: 0%;
-  top: 40%;
-  bottom: 40%;
-  background-color: var(--bg-bright);
-  z-index: -1;
-  -webkit-transition: background-color 0.2s ease-in-out, height 0.2s ease-in-out, top 0.2s ease-in-out;
-  -o-transition: background-color 0.2s ease-in-out, height 0.2s ease-in-out, top 0.2s ease-in-out;
-  transition: background-color 0.2s ease-in-out, height 0.2s ease-in-out, top 0.2s ease-in-out;
 }
 
 .services-button-active:hover{
@@ -1185,6 +1273,14 @@ input.input-search::placeholder{
   position: relative;
   grid-area: content;
   margin-left: 124px;
+}
+
+.services-text {
+  display: none;
+}
+
+.services-text-active {
+  display: block;
 }
 
 .services-title{
